--- a/design/popup.kv
+++ b/design/popup.kv
@@ -26,7 +26,7 @@
     #     orientation: "horizontal"
     #     Camera:
     #         id: camera
-    #         #resolution: (640, 480)
+    #         resolution: (640, 480)
     #         play: True
     #     Button:
     #         text: 'Capture'
