--- a/design/cards.kv
+++ b/design/cards.kv
@@ -9,22 +9,23 @@
     on_press: root.parent.parent.on_click_option(root.text)
 
     MDBoxLayout:
-        orientation: 'vertical'        
+        orientation: 'vertical'
 
         MDIconButton:
             icon: root.icon
             theme_icon_color: "Custom"
             icon_color: app.theme_cls.primary_color
-            icon_size: "64sp"
-            #padding_top: "10dp"
+            icon_size: "80sp"
             pos_hint: {"center_x": .5}
+            size_hint: 1,0.7
+            on_press: root.parent.parent.on_click_option(root.text)
 
         MDLabel:
             text: root.text
             halign: "center"
             color: "grey"
             bold: True
-            #padding_bottom: "10dp"
+            size_hint: 1,0.3
 
 
 <GalleryImageCard>
@@ -38,21 +39,3 @@
 
     FitImage:
         source: root.image_path
-
-
-<KIOverlayCard>
-    id: overlay
-    size_hint: None, None
-    size: "240dp", "240dp"
-    ripple_behavior: True
-    focus_behavior: True
-    
-    MDSpinner:
-        size_hint: None, None
-        size: dp(46), dp(46)
-        #pos_hint: {'center_x': .5, 'center_y': .5}
-        active: True
-
-    MDRoundFlatButton:
-        text: "Vergleiche mit KI"
-        on_press: root.hit_compare = True
