added functionality to spinner in compare screen

--- a/design/screens.kv
+++ b/design/screens.kv
@@ -52,6 +52,10 @@
 
 
 <CompareScreen>:
+    on_enter: 
+        self.get_ki_images()
+        
+
     MDBoxLayout:
         orientation: "vertical"        
         
