trying out camera

--- a/design/popup.kv
+++ b/design/popup.kv
@@ -22,18 +22,18 @@
     size_hint: None, None
     size: 400,400
     
-    # BoxLayout:
-    #     orientation: "horizontal"
-    #     Camera:
-    #         id: camera
-    #         resolution: (640, 480)
-    #         play: True
-    #     Button:
-    #         text: 'Capture'
-    #         size_hint_y: None
-    #         height: '48dp'
-    #         on_press: 
-    #             root.capture()
-    MDFlatButton:
-        text: 'Close Camera'
-        on_release: root.dismiss()
+    BoxLayout:
+        orientation: "horizontal"
+        Camera:
+            id: camera
+            resolution: (640, 480)
+            play: True
+        Button:
+            text: 'Capture'
+            size_hint_y: None
+            height: '48dp'
+            on_press: 
+                root.capture()
+        MDFlatButton:
+            text: 'Close Camera'
+            on_release: root.dismiss()
